--- a/public/css/user/user-index.css
+++ b/public/css/user/user-index.css
@@ -24,8 +24,8 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
     
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 0fr);
-    grid-template-areas: "tabla" "paginacion";
+    grid-template-rows: repeat(3, 0fr);
+    grid-template-areas: "buscador" "tabla" "paginacion";
     
     justify-items: center;
     
@@ -55,7 +55,41 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
 }
 
 .active{  
-  height:50px;
+    height:50px;
+}
+
+.user-search-container{
+    grid-area: buscador;
+
+    width: 80%;
+    padding: 40px 20px;
+    box-sizing: border-box;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+#search-form{
+    width: 90%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#search-form button{
+    padding: 0px;
+    margin: 0;
+    width: 30%;
+    color: var(--main-gris-oscuro);
+    background: none;
+}
+
+#search-form button:hover{
+    color:rgba(71, 71, 71, 0.5);
+    cursor: pointer;
 }
 
 #users-table {
