Redirecciones personalizadas segun el rol, se asigna rol de student al registrarse, mejoradas notificaciones

--- a/public/css/user/user-index.css
+++ b/public/css/user/user-index.css
@@ -184,7 +184,7 @@ td > a:hover {
     font-weight: bold;
 }
 
-.page-item:hover > a, a:active{
+.page-item:hover > a{
     color: var(--main-morado);
 }
 
