--- a/public/css/group/group-index.css
+++ b/public/css/group/group-index.css
@@ -20,6 +20,19 @@
     
 }
 
+.btnCreate{
+    width: 25%;
+    margin: 15px 0px;
+    
+    background-color: var(--main-morado);
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btnCreate:hover{
+    opacity: 70%;
+}
+
 #list-table {
     grid-area: tabla;
     
