--- a/public/css/group/group-form.css
+++ b/public/css/group/group-form.css
@@ -229,7 +229,18 @@ group-form-usersList-title{
     opacity: 70%;
 }
 
+.error_message{
+    background-color: #c00;
+    border-radius: 4px;
 
+    padding: 10px;
+    margin-top: 10px;
+
+    font-family: 'Rubik';
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+}
 
 /*
 .group-form-container{
