--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -367,6 +367,22 @@
   height:50px;
 }
 
+button:focus,
+a:focus, a:active,
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+select::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {
+  outline: none !important;
+}
+
+select:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #000;
+}
+
 
   @media (max-width: 1400px) {
 
@@ -464,4 +480,21 @@
     .dropdown-user-item:hover{
       background-color:rgb(10, 193, 200);
     }
+  }
+
+  @media (max-width: 720px) {
+    .btnUsuario{
+      padding: 0px;
+      font-size: 24px;
+    }
+  
+    .logo > a > h1{
+      font-size: 30px;
+    }
+
+    .icon-menu{
+      font-size: 22px;
+      padding: 10px;
+    }
+  
   }
