--- a/public/css/turn/turn-detail.css
+++ b/public/css/turn/turn-detail.css
@@ -7,17 +7,6 @@
     --main-turquesa: #3ACACE;
 }
 
-/* Usar si se decide otra alternativa de diseño en el dropdown
-Cuando se use en otras vistas simplemente cambiar el color de fondo
-.drop-filler{
-    background-color: var(--main-gris);
-    grid-row: 2 / span 2;
-    width: 100vw;
-    grid-column: 1 / -1;
-    position: relative;
-    left: calc(-50vw + 50%);
-}
-*/
 .main-container{
     width: 100vw;
     background-color: var(--main-gris);
@@ -27,143 +16,29 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
 }
 
 .turn-container{
-    width: 75vw;
-
-    display: grid;
-    grid-template-columns: 1fr 0.5fr 2fr;
-    grid-template-rows: 0fr 0fr 0fr 1fr 0fr 1fr;
-    grid-template-areas: "classroomName classroomName classroomName"
-                         "day day day"
-                         "beginHour beginHour beginHour"
-                         "datos datos datos"
-                         "grpTitle grpTitle grpTitle"
-                         "grupos grupos grupos";
-
-    justify-items: center;
-    align-items: center;
-
+    display: flex;
+    flex-direction: column;
+    font-size: 24px;
+    font-family: 'Rubik', sans-serif;
 }
 
-.photo{
-    grid-area: classroomName;
-
-    width: 180px;
-    height: 180px;
-    background-color: #fff;
-    border-radius: 50%;
-
-    background-image: url(../../imgs/default-user-image.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+.classroomName, .day, .hoursBox, .subject{
+    padding: 6px 0px;
 }
 
-.alias{
-    grid-area: day;
-    border-bottom: 1px solid rgba(125, 125, 125, 0.5);
+.hoursBox{
+    display: flex;
 }
 
-.groupTitle{
-    grid-area: grpTitle;
+.hours{
+    margin: 0px 5px;
 }
 
-.alias, .groupTitle{
-    font-family: 'Roboto', sans-serif;
-    font-size: 40px;
-    font-weight: bold;
-    color: var(--main-morado);
-
-    width: 70%;
-    text-align: center;
-    padding: 15px;
-}
-
-.nya{
-    grid-area: nomyap;
-    padding: 10px;
-
-    justify-self: flex-start;
-}
-
-.nya > div{
-    padding: 10px;
+.data a{
+    color: var(--main-azul-claro);
 }
 
 label{
-    font-family: 'Roboto', sans-serif;
-    font-size: 36px;
     font-weight: bold;
     color: var(--main-gris-oscuro);
-}
-
-.data{
-    font-family: 'Roboto', sans-serif;
-    font-size: 36px;
-    color: var(--main-gris-oscuro);
-}
-
-.name{
-    margin-top: 10px;
-}
-
-.puntuation{
-    grid-area: valoracion;
-    display: flex;
-    align-self: flex-start;
-    justify-self: left;
-    justify-content: center;
-    align-items: center;
-
-    margin-top: 30px;
-
-    height: 100%;
-    width: 70%;
-    background-color: var(--main-gris-oscuro);
-    padding: 20px;
-
-    box-sizing: border-box;
-}
-
-.puntuation > label{
-    color: #fff;
-}
-
-.dContainer{
-    grid-area: datos;
-    align-self: flex-start;
-    justify-self: left;
-    display: flex;
-    flex-direction: column;
-
-    padding: 10px;
-    border-bottom: 1px solid rgba(125, 125, 125, 0.5);
-}
-
-.dContainer > div{
-    padding: 10px;
-}
-
-@media (max-width: 1300px) {
-    .user-container{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(7, 0fr);
-        grid-template-areas: "foto"
-                             "alias"
-                             "nomyap"
-                             "valoracion"
-                             "datos"
-                             "grpTitle"
-                             "grupos";
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .nya, .puntuation, .dContainer {
-        justify-self: center;
-        text-align: center;
-    }
-
-    .puntuation{
-        margin: 0px;
-    }
 }
