--- a/public/css/contact-styles.css
+++ b/public/css/contact-styles.css
@@ -76,3 +76,15 @@ Cuando se use en otras vistas simplemente cambiar el color de fondo
     opacity: 0.7;
     background-color: var(--main-morado);
 }
+
+@media (max-width: 1400px){
+    .contactContainer{
+        margin-top: 20px;
+        text-align: center;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0fr 0fr 0fr;
+        grid-template-areas: "titulo"
+                             "contact1"
+                             "contact2";
+    }
+}
