--- a/public/css/group/group-more_groups.css
+++ b/public/css/group/group-more_groups.css
@@ -58,7 +58,7 @@
     font-family: 'Rubik', sans-serif;
     color:white;
     text-align: center;
-    font-size:14px;
+    font-size: 20px;
     font-weight: bold;
 }
 
@@ -77,11 +77,12 @@
 }
 
 #filterBtn{
-    background-color: var(--main-morado);
     width: auto;
-    padding: 3px 30px;
-    font-size:12px;
+    padding: 0;
+    font-size: 20px;
     cursor: pointer;
+    background: transparent;
+    color: var(--main-gris-oscuro);
 }
 
 #filterBtn:hover{
@@ -112,6 +113,8 @@
     font-family: 'Rubik', sans-serif;
     color: var(--main-gris-oscuro);
     font-size: 20px;
+
+    position: relative;
 }
 
 .element:hover{
@@ -190,4 +193,69 @@
     font-family: 'Rubik', sans-serif;
     font-weight: bold;
     background-color: var(--main-morado-apagado);
+}
+
+#form label{
+    font-size: 22px;
+    margin-right: 5px;
+}
+
+#nameTb{
+    border: none;
+    padding: 5px;
+    margin: 0px 5px;
+}
+
+#nameTb input:focus{
+    border: 3px solid var(--main-azul-claro);
+}
+
+#form select{
+    font-family: 'Rubik', sans-serif;
+    color: var(--main-gris-oscuro);
+    padding: 5px;
+    border: none;
+    background: transparent;
+    font-size: 22px;
+    text-align: center;
+}
+
+.deleteButton, .editButton{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 28px;
+    border-radius: 2px;
+}
+
+.editButton{
+    top: 12px;
+    right: 55px;
+    font-size: 24px;
+    padding: 1px 0px;
+}
+
+.editButton a, .deleteButton a{
+    display: flex;
+    padding: 3px 5px;
+}
+
+.editButton a{
+    color: var(--main-azul-claro);
+}
+
+.deleteButton a{
+    color: #c00;
+}
+
+.deleteButton:hover{
+    background-color: #c00;
+}
+
+.editButton:hover{
+    background-color: var(--main-azul-claro);
+}
+
+.deleteButton:hover a, .editButton:hover a{
+    color: #fff;
 }
